feat: add create a new category functionality
